samples/_failures_safe/1761160290_4c7939_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dd2692d7.c: In function ‘main’:
./samples/SAFE/__tmp_dd2692d7.c:158:47: error: expected ‘)’ at end of input
  158 |         struct Token token = lexer_next(&lexer
      |                                        ~      ^
      |                                               )
./samples/SAFE/__tmp_dd2692d7.c:158:16: error: expected declaration or statement at end of input
  158 |         struct Token token = lexer_next(&lexer
      |                ^~~~~
./samples/SAFE/__tmp_dd2692d7.c:158:16: error: expected declaration or statement at end of input
